--- a/TestAccount/toolsacct-codepipeline-cloudformation-deployer.yaml
+++ b/TestAccount/toolsacct-codepipeline-cloudformation-deployer.yaml
@@ -112,6 +112,12 @@ Resources:
           -
             Effect: Allow
             Action:
+              - iam:CreateServiceLinkedRole
+            Resource:
+             - !Sub arn:aws:iam::${AWS::AccountId}:role/aws-service-role/ops.apigateway.amazonaws.com/AWSServiceRoleForAPIGateway
+          -
+            Effect: Allow
+            Action:
               - s3:PutObject
               - s3:GetBucketPolicy
               - s3:GetObject
